Fixed cases spacing

--- a/src/components/cases/Case/Case.module.scss
+++ b/src/components/cases/Case/Case.module.scss
@@ -5,23 +5,23 @@
   padding: 40px 0;
   background-color: rgb(var(--white));
   border-radius: 32px;
-  margin: 96px 0;
+  margin: 40px 0;
 
   @include mixins.lg {
     padding: 72px 8px;
   }
 
   & > button {
+    cursor: pointer;
     display: flex;
     position: absolute;
     top: 0;
     right: 0;
     padding: 28px;
-    cursor: pointer;
   }
 
   .photos {
-    width: 504px;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -32,9 +32,11 @@
       cursor: pointer;
       border-radius: 32px;
       transition: 350ms;
+      flex-grow: 1;
+      padding: 0 40px;
       img {
         width: 100%;
-        aspect-ratio: 1;
+        height: 100% !important;
         height: auto;
         border-radius: 32px;
         transition: 350ms;
@@ -86,15 +88,16 @@
   .textContent {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     height: 100%;
-    padding-right: 24px;
+    padding-right: 80px;
 
     & > p {
       color: rgb(var(--folha));
       text-transform: uppercase;
       font-weight: 800;
-      margin-bottom: 24px;
+      margin-bottom: 16px;
+      margin-top: 24px;
     }
 
     & > h2 {
